tidy up old http code and move to grpc + http proxy
