# internal/email/genericsmtp/handlers_validation.gen.go
@@ -1,39 +1,0 @@
-// Code generated by valforge. DO NOT EDIT.
-// Version: v0.0.3
-
-package fastmail
-
-import (
-
-    valgen "github.com/typewriterco/p402/internal/valgen"
-)
-
-func (v ConfigureSMTPRequest) Validate() error {
-    verr := valgen.NewValidationError("ConfigureSMTPRequest")
-
-    if v.SMTPAddress == "" {
-        verr.AddFieldError("smtp_address", "smtp_address is required", v.SMTPAddress)
-    }
-    if len(v.SMTPAddress) < 3 {
-        verr.AddFieldError("smtp_address", "smtp_address must be at least 3 characters", v.SMTPAddress)
-    }
-
-    if v.SMTPPort == 0 {
-        verr.AddFieldError("smtp_port", "smtp_port is required", v.SMTPPort)
-    }
-
-    if v.Username == "" {
-        verr.AddFieldError("username", "username is required", v.Username)
-    }
-
-    if v.Password == "" {
-        verr.AddFieldError("password", "password is required", v.Password)
-    }
-
-    if len(verr.Errors) > 0 {
-        return verr
-    }
-
-    return nil
-}
-
